--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,14 +5,29 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }}
+        <span class="font-weight-bold">
+          {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}
+        </span>
+        <span style="font-size: 0.5em; font-weight: normal; opacity: 0.7; margin-left: 0.2em;">
+          [hojʌn tɕɑŋ]
+        </span>
       {% else %}
         {{ site.title }}
       {% endif %}
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
   </header>
+
+  <style>
+    table tr:hover {
+      background-color: transparent !important;
+      box-shadow: none !important;
+      transform: none !important; /* 혹시 모를 움직임 효과 제거 */
+    }
+    footer {
+      display: none !important;
+    }
+  </style>
 
   <article>
     {% if page.profile %}
@@ -22,11 +37,9 @@ layout: default
           {% if page.profile.image_circular %}
             {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
           {% else %}
-            {% assign profile_image_class = 'img-fluid z-depth-1
-      rounded' %}
+            {% assign profile_image_class = 'img-fluid z-depth-1 rounded' %}
           {% endif %}
-          {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
-      30vw, 95vw"{% endcapture %}
+          {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px) 30vw, 95vw"{% endcapture %}
           {%
             include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes=sizes alt=page.profile.image
             cache_bust=true
@@ -40,39 +53,69 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
-    <!-- News -->
-    {% if page.announcements and page.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
-      </h2>
-      {% include news.liquid limit=true %}
-    {% endif %}
-
-    <!-- Latest posts -->
-    {% if page.latest_posts and page.latest_posts.enabled %}
-      <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
-      </h2>
-      {% include latest_posts.liquid %}
-    {% endif %}
-
-    <!-- Selected papers -->
-    {% if page.selected_papers %}
-      <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
-      </h2>
-      {% include selected_papers.liquid %}
-    {% endif %}
-
-    <!-- Social -->
-    {% if page.social %}
-      <div class="social">
-        <div class="contact-icons">{% include social.liquid %}</div>
-
-        <div class="contact-note">{{ site.contact_note }}</div>
+    {% if site.data.education %}
+      <h2 class="mt-4">Education</h2>
+      <div class="table-responsive">
+        <table class="table table-sm table-borderless">
+          {% for item in site.data.education %}
+          <tr>
+            <th scope="row" style="width: 20%; font-weight: normal; color: var(--global-text-color-light);">{{ item.year }}</th>
+            <td>
+              <span class="font-weight-bold">{{ item.course }}</span>
+              <br>
+              {{ item.institution }}
+              {% if item.description %}
+                <br><span style="font-size: 0.9em; font-style: italic;">{{ item.description }}</span>
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
       </div>
     {% endif %}
 
+    {% if site.data.experience %}
+      <h2 class="mt-4">Academic Experience</h2>
+      <div class="table-responsive">
+        <table class="table table-sm table-borderless">
+          {% for item in site.data.experience %}
+          <tr>
+            <th scope="row" style="width: 20%; font-weight: normal; color: var(--global-text-color-light);">{{ item.year }}</th>
+            <td>
+              <span class="font-weight-bold">{{ item.role }}</span>
+              <br>
+              {{ item.company }}
+              {% if item.description %}
+                <br><span style="font-size: 0.9em; color: var(--global-text-color-light);">{{ item.description }}</span>
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+    {% endif %}
+
+    {% if site.data.languages %}
+      <h2 class="mt-4">Languages</h2>
+      <div class="table-responsive">
+        <table class="table table-sm table-borderless">
+          {% for item in site.data.languages %}
+          <tr>
+            <td style="width: 20%; font-weight: bold;">{{ item.language }}</td>
+            <td>
+              {{ item.level }}
+              {% if item.score %}
+                <span style="font-size: 0.9em; color: var(--global-text-color-light); font-style: italic;">
+                  ({{ item.score }})
+                </span>
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+    {% endif %}
+    
     {% if site.newsletter and site.newsletter.enabled and site.footer_fixed %}
       {% include newsletter.liquid center=true %}
     {% endif %}
